# colsmol-reasoning

./: .gitignore  README.md  evaluate_vidore.py  publishable_research_directions.md  pyproject.toml  results_v2.csv  visualize_results.py
checkpoints/r2r/final/: README.md
checkpoints/r2r/runs/r2r_none_seed42/: run_metadata.json  train_metrics.csv
checkpoints/r2r/runs/r2r_offline_seed42_fastfail/: run_metadata.json
checkpoints/r2r/runs/r2r_offline_seed42_fastfail2/: run_metadata.json
colsmol_reasoning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/distillation/: base.yaml  cpu_debug.yaml
configs/eval/: vidore.yaml
configs/r2r/: base.yaml
docs/: action.md  experiment_log.md  project_proposal_icdar2026.md  r2r_mid_nitty_gritty.md  technical_report.md  update_sheet.md
evaluation/: aggregate_ablation_summary.py  compare_ablation_results.py  evaluate_r2r.py  evaluate_vidore_v2.py  format_results.py  generate_comprehensive_charts.py  generate_radar_charts.py
results/: r2r_use_vs_base_vidorev1.csv  r2r_use_vs_base_vidorev2.csv  results_v1.csv
scripts/: check_data.py  generate_traces.py  run_ablation.sh  run_r2r_evals.sh  train_distillation.py  train_r2r.py
src/: __init__.py
src/data/: __init__.py  vidore.py
src/distillation/: __init__.py  losses.py  trainer.py
src/models/: __init__.py  colsmol.py  teacher.py
src/reasoning/: __init__.py  augmented_retriever.py  trace_generator.py  trainer.py
src/utils/: __init__.py  experiment.py
tests/: reproduce_r2r_training.py  test_trace_generation.py  test_training_sanity.py
(+49 files in other folders)
